# homework-12

./: .gitignore  README.md  pyproject.toml
homework/: db.sqlite3
homework/homework/: settings.py  urls.py
homework/main/: admin.py  forms.py  models.py  urls.py  views.py
homework/main/migrations/: 0001_initial.py  0002_product_rate.py
homework/main/templates/: add_product.html
homework/templates/: base.html
