[project]
name = "homework-13"
version = "0.1.0"
description = ""
authors = [
    {name = "thekovalskii",email = "thekovalskii@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
